--- a/assets/app.css
+++ b/assets/app.css
@@ -4,7 +4,7 @@ body {
     border: 0px;
     padding: 0px;
     font-family: Arial,sans-serif;
-    color: #404040;
+    color: #303030;
 }
 
 body.dark {
@@ -29,49 +29,57 @@ svg .stroke {
     fill: none;
 }
 
-header, footer {
+header,
+footer {
     position: fixed;
-    z-index: 10;
+    z-index: 100;
+}
+
+header,
+footer,
+#background-overlay {
+    background: rgba(255,255,255,0.4);
+}
+.dark header,
+.dark footer,
+.dark #background-overlay {
+    background: rgba(0,0,0,0.4);
 }
 header {
     left: 0px;
     width: 100%;
     top: 0px;
     height: 70px;
-    background: linear-gradient(
-        to bottom,
-        rgba(255,255,255,1.0) 80%,
-        rgba(255,255,255,0.0) 100%
-    );
-}
-.dark header {
-    background: linear-gradient(
-        to bottom,
-        rgba(0,0,0,1.0) 80%,
-        rgba(0,0,0,0.0) 100%
-    );
-
 }
 section {
     position: absolute;
     top: 80px;
+    z-index: 10;
+}
+#background,
+#background-image {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+}
+#background {
     z-index: 1;
+}
+#background-image {
+    z-index: 0;
+    background-size: cover;
+    filter: blur(40px);
+}
+#background-overlay {
+    width: 100%;
+    height: 100%;
 }
 footer {
     bottom: 0px;
     width: 100%;
-    background: linear-gradient(
-        to top,
-        rgba(255,255,255,1.0) 80%,
-        rgba(255,255,255,0.0) 100%
-    );
-}
-.dark footer {
-    background: linear-gradient(
-        to top,
-        rgba(0,0,0,1.0) 80%,
-        rgba(0,0,0,0.0) 100%
-    );
 }
 @media (orientation: portrait) {
     section {
@@ -81,6 +89,9 @@ footer {
     }
     #list {
         display: none;
+    }
+    #background {
+        padding: 70px 0 120px;
     }
     footer {
         height: 120px;
@@ -101,6 +112,9 @@ footer {
     #config {
         left: 0px;
         width: 100%;
+    }
+    #background {
+        padding: 70px 0 90px;
     }
     footer {
         height: 90px;
@@ -192,7 +206,6 @@ footer {
     position: fixed;
     top: 20%;
     height: 60%;
-    z-index: -100;
 	background-position: center center; 
 	background-repeat: no-repeat;
     background-size: cover;
