--- a/assets/app.css
+++ b/assets/app.css
@@ -58,12 +58,18 @@ section {
 }
 #background,
 #background-image {
+    display: none;
     position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
+}
+
+#background.show,
+#background-image.show {
+    display: block;
 }
 #background {
     z-index: 1;
@@ -534,9 +540,13 @@ button {
 
 #submenu {
     position: fixed;
+    display: none;
     left: 66.66%;
     width: 33.33%;
     top: 55px;
+}
+#submenu.show {
+    display: block;
 }
 #submenu ol {
     list-style-type: none;
