--- a/assets/app.css
+++ b/assets/app.css
@@ -66,7 +66,6 @@ header {
 }
 #background,
 #background-image {
-    display: none;
     position: fixed;
     top: 0px;
     left: 0px;
@@ -75,9 +74,9 @@ header {
     box-sizing: border-box;
 }
 
-#background.show,
-#background-image.show {
-    display: block;
+#background.hide,
+#background-image.hide{
+    display: none;
 }
 #background {
     z-index: 1;
