--- a/assets/app.css
+++ b/assets/app.css
@@ -219,12 +219,20 @@ footer {
     white-space: nowrap;
 }
 
-#current_cover {
+#main-cover-frame {
     position: absolute;
-    top: 30%;
-    height: 60%;
-    left: 15%;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#main-cover {
     width: 70%;
+    padding: 70% 0 0;
 	background-position: center center; 
 	background-repeat: no-repeat;
     background-size: cover;
