--- a/assets/app.css
+++ b/assets/app.css
@@ -29,12 +29,14 @@ svg .stroke {
     fill: none;
 }
 
-li {
+#list li,
+#config li {
     margin-top: 1px;
     border-bottom: dashed 1px #404040;
 }
 
-.dark li {
+.dark #list li,
+.dark #config li {
     margin-top: 1px;
     border-bottom: dashed 1px #e0e0e0;
 }
@@ -167,54 +169,54 @@ footer {
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-#list .song {
+.song {
     align-items: center;
     padding: 8px 4px;
 }
-#list .song span {
+.song span {
     margin: 0 8px 0 0;
 }
-#list .song svg {
+.song svg {
     margin: 0;
     width: 22px;
     height: 22px;
 }
-#list .song .title {
+.song .title {
     font-size: 20px;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
-#list .song .artist {
+.song .artist {
     flex: 1 1 auto;
     opacity: 0.7;
 }
-#list .song .track,
-#list .song .artist,
-#list .song .elapsed,
-#list .song .length_separator,
-#list .song .length {
+.song .track,
+.song .artist,
+.song .elapsed,
+.song .length_separator,
+.song .length {
     font-size: 12px;
 }
-#list .song .length {
+.song .length {
     margin: 0;
 }
 @media (max-width: 400px), (max-width: 800px) and (orientation: landscape) {
-    #list .song {
+    .song {
         flex-flow: row wrap;
     }
-    #list .song .track,
-    #list .song .length_separator,
-    #list .song .length {
+    .song .track,
+    .song .length_separator,
+    .song .length {
         display: none;
     }
-    #list .song .elapsed {
+    .song .elapsed {
         margin: 0;
     }
-    #list .song .title {
+    .song .title {
         flex: 1 1 auto;
     }
-    #list .song .artist {
+    .song .artist {
         flex: 0 1 auto;
         order: 10;
         width: 100%;
@@ -223,32 +225,33 @@ footer {
         white-space: nowrap;
     }
 }
-#list .album {
+.album {
+    display: flex;
     align-items: center;
 }
-#list .album .detail {
+.album .detail {
     display: flex;
     flex-direction: column;
 }
-#list .album .img-sq {
+.album .img-sq {
     display: flex;
     justify-content: flex-end;
     width: 70px;
     height: 70px;
     padding: 5px;
 }
-#list .album .cover {
+.album .cover {
     width: auto;
     height: 70px;
     max-height: 100%;
 }
-#list .album .album {
+.album .album {
     font-size: 22px;
 }
-#list .album .date {
+.album .date {
     font-size: 10px;
 }
-#list .album .albumartist {
+.album .albumartist {
     font-size: 14px;
 }
 
@@ -427,21 +430,43 @@ button {
     background-color: rgba(255,255,255,0);
 }
 
-#menu,
-#menu nav,
-#menu nav button {
-}
-
 #menu {
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    padding: 10px;
+    width: 100%;
+    height: 100%;
 }
 
+#menu-list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-content: space-around;
+    list-style-type: none;
+    margin: 0;
+    padding: 10px;
+    width: 100%;
+}
+
+#menu-back {
+    display: flex;
+    align-items: center;
+    flex: 1 1 auto;
+}
+
+#menu-main {
+    margin: 0 12px;
+}
+
+#menu-back.root {
+    visibility: hidden;
+}
 @media (orientation: portrait) {
-    #menu {
-        padding: 15px 5%;
+    #menu-list {
+        padding: 0 5%;
+    }
+    #menu-back-content.sub {
+        display: none;
     }
 }
 
