--- a/assets/app.css
+++ b/assets/app.css
@@ -62,9 +62,9 @@ header {
 .unscrollable {
   position: fixed;
   top: 0;
-  padding: 0;
   height: 100%;
   z-index: 10;
+  box-sizing: border-box;
 }
 .fit {
   position: fixed;
@@ -94,11 +94,17 @@ footer {
   width: 100%;
 }
 @media (orientation: portrait) {
-  section {
+  .scrollable {
     left: 0;
     width: 100%;
     padding: 0 0 150px;
   }
+  .unscrollable {
+    left: 0;
+    width: 100%;
+    padding: 80px 0 150px;
+  }
+
   .view-config #config,
   .view-list #list,
   .view-main #main {
@@ -120,8 +126,11 @@ footer {
   }
 }
 @media (orientation: landscape) {
-  section {
+  .scrollable {
     padding: 0 0 90px;
+  }
+  .unscrollable {
+    padding: 80px 0 90px;
   }
   .view-config #config,
   .view-list #list,
@@ -252,6 +261,7 @@ footer {
   width: auto;
   height: 70px;
   max-height: 100%;
+  border-radius: 2px;
 }
 .album .album {
   font-size: 22px;
@@ -262,28 +272,26 @@ footer {
 .album .albumartist {
   font-size: 14px;
 }
-
 #main span {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-
-#main-cover-frame {
-  position: absolute;
-  left: 0;
-  top: 0;
+#main-box {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-flow: column nowrap;
   align-items: center;
   justify-content: center;
+
 }
 #main-cover {
-	background-position: center center; 
-	background-repeat: no-repeat;
-  background-size: cover;
-  border-radius: 100%;
+  position: relative;
+  width: 70%;
+  height: 70%;
+  order: -1;
+  flex: 0 0 auto;
 }
 @media (orientation: portrait) {
   #main-cover {
@@ -297,34 +305,33 @@ footer {
     height: 35vw;
   }
 }
-#main-elapsed-circle-frame,
+#main-cover-img {
+  position: absolute;
+  left: 5%;
+  top: 5%;
+  width: 90%;
+  height: 90%;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-radius: 100%;
+}
 #main-elapsed-circle {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-}
-#main-elapsed-circle {
   stroke-width: 4;
 }
 #main-elapsed-circle .inactive {
   stroke-opacity: 0.5;
 }
 
-#main-title,
-#main-artist {
-  position: relative;
-  left: 10px;
-  width: 100%;
-}
-
 #main-title {
-  top: 90px;
   font-size: 20px;
 }
 #main-artist {
-  top: 120px;
   font-size: 20px;
 }
 
