--- a/assets/app.css
+++ b/assets/app.css
@@ -411,6 +411,21 @@ footer {
 .dark .switch input:checked + label:after {
   background-color: #202020;
 }
+.button-simple {
+  border-radius: 24px;
+  height: 30px;
+  margin: 5px;
+  display: flex;
+  align-items: center;
+  padding: 0 24px;
+  font-size: 18px;
+  color: #e0e0e0;
+  background-color: #404040;
+}
+.dark .button-simple {
+  color: #404040;
+  background-color: #e0e0e0;
+}
 
 #config select {
   outline: 0;
