--- a/assets/app.css
+++ b/assets/app.css
@@ -658,17 +658,20 @@ button {
 #menu-settings-list.show {
   display: block;
 }
-#menu-settings-list li {
+.dropdown-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 0;
   border: none;
-}
-#menu-settings-list button {
   font-size: 14px;
   width: 100%;
   height: 40px;
   background-color: #d0d0d0;
+  transition: background-color 0.5s ease-out;
+  font-size: 18px;
 }
-#menu-settings-list button:hover {
+.dropdown-item:hover {
   width: 100%;
   height: 40px;
   background-color: #c0c0c0;
