--- a/assets/app.css
+++ b/assets/app.css
@@ -315,6 +315,9 @@ footer {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  border-radius: 1%;
+}
+#main-cover-img.circled {
   border-radius: 100%;
 }
 #main-elapsed-circle {
