--- a/assets/app.css
+++ b/assets/app.css
@@ -471,19 +471,30 @@ footer {
 #error {
   position: fixed;
   top: 40px;
-  right: 0;
+  right: -400px;
   margin: 10px;
   padding: 5px;
   width: 300px;
-  display: none;
   background-color: #ffffff;
-  z-index: 200;
+  z-index: 20;
 }
 .dark #error {
   background-color: #404040;
 }
+#error.hide {
+  animation: error-hide 0.3s linear 0s;
+}
 #error.show {
-  display: block;
+  right: 0;
+  animation: error-show 0.3s linear 0s;
+}
+@keyframes error-show {
+from {right: -400px;}
+to {right: 0;}
+}
+@keyframes error-hide {
+from {right: 0;}
+to {right: -400px;}
 }
 
 #error > * {
